--- a/CodeHb.UnidadesSaudePoa.Web/Views/Mapas/Mapa.cshtml
+++ b/CodeHb.UnidadesSaudePoa.Web/Views/Mapas/Mapa.cshtml
@@ -1,97 +1,112 @@
-﻿@model CodeHb.UnidadesSaudePoa.Web.Models.UnidadeSaude
-
-@{
-    ViewBag.Title = "Mapa";
-}
-
-<h2>Mapa das Unidades de Saúde</h2>
-<div id="map_canvas" style="width: 95%; height: 432px"></div>
-
-<script type="text/javascript" language="javascript">
-
-     window.onload = function () {
-         chamaMapa();
-
-        
-         //FazMarcacao("-30.015932", "-51.158867");
-
-         //FazMarcacao("-30.029413", "-51.214928");
-
-         //FazMarcacao("-30.029761", "-51.220184");
-
-         chamaMarcacaoComTextoInfo("-30.029761", "-51.220184", "teste", "324234324", "asdsad");
-         chamaMarcacaoComTextoInfo("-30.029413", "-51.214928", "sdfdsfsdf", "324234324", "asdsad");
-        
-        
-     };
+﻿
+    <div id="map-canvas" style="width: 95%; height: 432px" />
 
 
-     //variavel cria para que seja criado o mapa Google Maps
-     var map = null;
-     //Essa e a funcao que criara o mapa GoogleMaps
-     function chamaMapa() {
-         //aqui vamos definir as coordenadas de latitude e longitude no qual
-         //sera exibido o nosso mapa
-         var latlng = new google.maps.LatLng(-30.0277, -51.2287); //DEFINE A LOCALIZAÇÃO EXATA DO MAPA
-         //aqui vamos configurar o mapa, como o zoom, o centro do mapa, etc
-         var myOptions = {
-             zoom: 15,//utilizaremos o zoom 15
-             center: latlng,//aqui a nossa variavel constando latitude e
-             //longitude ja declarada acima
-             mapTypeId: google.maps.MapTypeId.ROADMAP
-         };
-         //criando o mapa dentro da div com o id="map_canvas" que ja criamos
-         map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
-         //DEFINE AS COORDENADAS do ponto exato - CENTRALIZAÇÃO DO MAPA
-         //map.setCenter(new google.maps.LatLng(-30.0277, -51.2287));
-     }
-     function abreLink() {
-         window.open('http://www.google.com.br');
-     }
+<script> // type="text/javascript" language="javascript"
+
+    // *
+    // * Adicionar multiplos marcadores
+    // * 2013 - www.marnoto.com
+    // *
+
+    // Váriáveis necessárias
+    var map;
+    var infoWindow;
+
+    // A variável markersData guarda a informação necessária a cada marcador
+    // Para utilizar este código basta alterar a informação contida nesta variável
+   
 
 
-     //function FazMarcacao(lat, long) {//-30.01008,-51.159222
-         
-     //    var latlong = lat + "," + long;//colocando na conficuracao necessaria (lat,long)
-     //    var myLatLgn = new google.maps.LatLng(-30.0277, -51.2287);
-     //    //criando variavel tipo google.maps.LatLng e 
-     //    //passando como parametro a latitude e longitude
-     //    //na configuracao: latitude,longitude.
+    function initialize() {
+        var mapOptions = {
+            center: new google.maps.LatLng(40.601203, -8.668173),
+            zoom: 9,
+            mapTypeId: 'roadmap',
+        };
 
-     //    //aproximando o mapa, aumentando o zoom
-     //    map.setZoom(17);
+        map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
-     //    //fazendo  a marcacao, usando o latitude e longitude da variavel criada acima
-     //    var marker = new google.maps.Marker({ position: myLatLgn, map: map });
-     //    //aqui a variavel e o comando que faz a marcação
+        // cria a nova Info Window com referência à variável infowindow
+        // o conteúdo da Info Window será atribuído mais tarde
+        infoWindow = new google.maps.InfoWindow();
 
-     //    map.setCenter(myLatLgn);//leva o mapa para a posicao da marcacao
-     //} 
+        // evento que fecha a infoWindow com click no mapa
+        google.maps.event.addListener(map, 'click', function () {
+            infoWindow.close();
+        });
 
-     function chamaMarcacaoComTextoInfo(lat, long, nome, telefone, endereco)
-     {  
-        var latlong = lat + "," + long;
-        var myLatLgn = new google.maps.LatLng(-30.0277, -51.2287);         
-        map.setZoom(17);
-        var marker = new google.maps.Marker({ position: myLatLgn, map: map });
-        map.setCenter(latlong);
-        var infowindow = new google.maps.InfoWindow(), marker;
-        
-        google.maps.event.addListener(marker, 'click', (function (marker, i)
-        {
-            return function ()
-            {     
-                var iwContent = '<div id="iw_container">' +
-                                    '<div class="iw_title">' + nome + '</div>' +
-                                    '<div class="iw_content">' + telefone +
-                                    '<br />' + endereco +
-                                    '</div></div>';
-
-                infowindow.setContent(iwContent);
-                infowindow.open(map, marker);
-            }
-        })(marker))
+        // Chamada para a função que vai percorrer a informação
+        // contida na variável markersData e criar os marcadores a mostrar no mapa
+        displayMarkers();
     }
-    
+    google.maps.event.addDomListener(window, 'load', initialize);
+
+    // Esta função vai percorrer a informação contida na variável markersData
+    // e cria os marcadores através da função createMarker
+    function displayMarkers() {
+
+        // esta variável vai definir a área de mapa a abranger e o nível do zoom
+        // de acordo com as posições dos marcadores
+        var bounds = new google.maps.LatLngBounds();
+
+        $.ajax({
+            url: '/Mapas/GetPins/', // aqui vai a URL do método //http://www.json-generator.com/api/json/get/cgVhTayIHS?indent=2
+            dataType: 'json',
+            success: function (response) {
+                for (var i = 0; i < response.length; i++) {
+
+                    var latlng = new google.maps.LatLng(response[i].Latitude, response[i].Longitude);
+                    var nome = response[i].Nome;
+                    var telefone = response[i].Telefone;
+                    var endereco = response[i].Endereco;
+
+                    createMarker(latlng, nome, telefone, endereco);
+
+                    // Os valores de latitude e longitude do marcador são adicionados à
+                    // variável bounds
+                    bounds.extend(latlng);
+                }
+
+                // Depois de criados todos os marcadores,
+                // a API, através da sua função fitBounds, vai redefinir o nível do zoom
+                // e consequentemente a área do mapa abrangida de acordo com
+                // as posições dos marcadores
+                map.fitBounds(bounds);
+            }
+        });
+       
+
+        // Depois de criados todos os marcadores
+        // a API através da sua função fitBounds vai redefinir o nível do zoom
+        // e consequentemente a área do mapa abrangida.
+        map.fitBounds(bounds);
+    }
+
+    // Função que cria os marcadores e define o conteúdo de cada Info Window.
+    function createMarker(latlng, nome, telefone, endereco) {
+        var marker = new google.maps.Marker({
+            map: map,
+            position: latlng,
+            title: nome
+        });
+
+        // Evento que dá instrução à API para estar alerta ao click no marcador.
+        // Define o conteúdo e abre a Info Window.
+        google.maps.event.addListener(marker, 'click', function () {
+
+            // Variável que define a estrutura do HTML a inserir na Info Window.
+            var iwContent = '<div id="iw_container">' +
+                '<div class="iw_title">' + nome + '</div>' +
+                '<div class="iw_content">' + telefone + '<br />' +                
+                endereco + '</div></div>';
+
+            // O conteúdo da variável iwContent é inserido na Info Window.
+            infoWindow.setContent(iwContent);
+
+            // A Info Window é aberta.
+            infoWindow.open(map, marker);
+        });
+    }
 
 </script>
